[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/dialogs/NewProject.gd" type="Script" id=1]
[ext_resource path="res://src/components/VersionDropdown.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/font/NotoSans-Bold-16.tres" type="DynamicFont" id=4]
[ext_resource path="res://styles/theme.tres" type="Theme" id=5]

[sub_resource type="ButtonGroup" id=1]

[node name="NewProject" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 7.33258
margin_right = 608.0
margin_bottom = 407.333
size_flags_horizontal = 3
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 600.0
margin_bottom = 17.0
text = "Project Name:"

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 21.0
margin_right = 600.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Name" type="LineEdit" parent="VBox/HBox"]
margin_right = 503.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
caret_blink = true
caret_blink_speed = 0.5

[node name="CreateFolder" type="Button" parent="VBox/HBox"]
margin_left = 508.0
margin_top = 3.0
margin_right = 600.0
margin_bottom = 36.0
size_flags_vertical = 4
text = "Create Folder"

[node name="spacer" type="Control" parent="VBox"]
margin_top = 64.0
margin_right = 600.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 5 )

[node name="Label2" type="Label" parent="VBox"]
margin_top = 73.0
margin_right = 600.0
margin_bottom = 90.0
text = "Project Location:"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
margin_top = 94.0
margin_right = 600.0
margin_bottom = 127.0
custom_constants/separation = 5

[node name="Location" type="LineEdit" parent="VBox/HBox2"]
margin_right = 528.0
margin_bottom = 33.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Browse" type="Button" parent="VBox/HBox2"]
margin_left = 533.0
margin_right = 600.0
margin_bottom = 33.0
text = "Browse..."

[node name="AlreadyExists" type="Label" parent="VBox"]
margin_top = 131.0
margin_right = 600.0
margin_bottom = 148.0
custom_colors/font_color = Color( 1, 0.619608, 0.619608, 1 )
text = "This folder already exists"

[node name="spacer2" type="Control" parent="VBox"]
margin_top = 152.0
margin_right = 600.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 5 )

[node name="HBox3" type="HBoxContainer" parent="VBox"]
margin_top = 161.0
margin_right = 600.0
margin_bottom = 194.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="VBox/HBox3"]
margin_top = 8.0
margin_right = 83.0
margin_bottom = 25.0
text = "Godot Version:"

[node name="VersionDropdown" parent="VBox/HBox3" instance=ExtResource( 2 )]
margin_left = 88.0
margin_right = 238.0
margin_bottom = 33.0

[node name="spacer" type="Control" parent="VBox/HBox3"]
margin_left = 243.0
margin_right = 439.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="GLVersion" type="HBoxContainer" parent="VBox/HBox3"]
margin_left = 444.0
margin_right = 600.0
margin_bottom = 33.0

[node name="GL3" type="CheckBox" parent="VBox/HBox3/GLVersion"]
margin_right = 59.0
margin_bottom = 33.0
pressed = true
group = SubResource( 1 )
text = "GLES 3"

[node name="GL2" type="CheckBox" parent="VBox/HBox3/GLVersion"]
margin_left = 63.0
margin_right = 122.0
margin_bottom = 33.0
group = SubResource( 1 )
text = "GLES 2"

[node name="About" type="Button" parent="VBox/HBox3/GLVersion"]
margin_left = 126.0
margin_right = 156.0
margin_bottom = 33.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 4
text = "?"

[node name="spacer3" type="Control" parent="VBox"]
margin_top = 198.0
margin_right = 600.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 5 )

[node name="HBox4" type="HBoxContainer" parent="VBox"]
margin_top = 207.0
margin_right = 600.0
margin_bottom = 224.0

[node name="UseGit" type="CheckBox" parent="VBox/HBox4"]
margin_right = 150.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 0 )
text = "Create Git repository"

[node name="Dialogs" type="Node" parent="."]

[node name="Browse" type="FileDialog" parent="Dialogs"]
margin_left = 8.0
margin_top = 8.0
margin_right = 608.0
margin_bottom = 408.0
rect_min_size = Vector2( 600, 400 )
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/home/jwestman/Documents/hourglass"
current_path = "/home/jwestman/Documents/hourglass/"
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="VBox/HBox/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_entered" from="VBox/HBox/Name" to="." method="_on_Name_text_entered"]
[connection signal="pressed" from="VBox/HBox/CreateFolder" to="." method="_on_CreateFolder_pressed"]
[connection signal="text_changed" from="VBox/HBox2/Location" to="." method="_on_Location_text_changed"]
[connection signal="pressed" from="VBox/HBox2/Browse" to="." method="_on_Browse_pressed"]
[connection signal="item_selected" from="VBox/HBox3/VersionDropdown" to="." method="_on_VersionDropdown_item_selected"]
[connection signal="pressed" from="VBox/HBox3/GLVersion/About" to="." method="_on_About_pressed"]
[connection signal="toggled" from="VBox/HBox4/UseGit" to="." method="_on_UseGit_toggled"]
[connection signal="dir_selected" from="Dialogs/Browse" to="." method="_on_Browse_dir_selected"]
